[package]
name = "zerOS-kcmdline"
description = "zerOS boot command-line parsing code"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_kcmdline"
crate-type = ["rlib"]