[package]
name = "zerOS-kmain"
description = "zerOS main thread function"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_kmain"
crate-type = ["rlib"]