[package]
name = "zerOS-macro-utils"
description = "A bunch of rust utility macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_macro_utils"
harness = false
crate-type = ["rlib"]

[dependencies]
eager2 = "1.0.1"
lazy_static = { version = "1.5", features = [ "spin_no_std" ]}
zerOS-proc-macro-utils = { path = "../proc-macro-utils" }
