[package]
name = "zerOS-sync"
description = "zerOS parallel and concurrent primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_sync"
crate-type = ["rlib"]
harness = false

[dependencies]
lock_api = { version = "0.4.13", default-features = false, features = [
    "nightly",
    "arc_lock"
] }
portable-atomic = { version = "1.11.1", default-features = false, features = [
    "require-cas",
] }
