[package]
name = "zerOS-utils"
description = "Various unsorted utilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_utils"
crate-type = ["rlib"]
harness = false

[dependencies]
rustc-demangle = { version = "0.1.25", default-features = false }
sealed = "0.6.0"
simdutf8 = { version = "0.1.5", default-features = false, features = [
    "aarch64_neon",
    "aarch64_neon_prefetch",
    "hints",
] }
typenum = { version = "1.18.0", features = ["const-generics"] }
zerOS-static-assertions = { path = "../static-assertions" }
zerOS-macro-utils = { path = "../macro-utils" }
